--- a/AOC2022_day1_part1.ipynb
+++ b/AOC2022_day1_part1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLSiq5FgBE5IGHof69jZfW"
+      "authorship_tag": "ABX9TyOLSiq5FgBE5IGHof69jZfW",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rewardisenough/basic_python_code/blob/main/AOC2022_day1_part1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -2273,7 +2284,7 @@
         "cellView": "form",
         "id": "r41xcC-QGHQw"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -2287,9 +2298,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ft0PiHAsACgP",
-        "outputId": "518e67c8-0e14-4096-911e-3a3a0f99066e"
+        "outputId": "9baf3d43-41f4-42e5-9436-daf3e3907428"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -2310,7 +2321,7 @@
       "metadata": {
         "id": "TaA07BzFDIHT"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -2328,7 +2339,7 @@
       "metadata": {
         "id": "tkRrJkipF96D"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -2343,9 +2354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6GkIuxgdILzT",
-        "outputId": "0bb14712-86bb-4fba-e9df-88707ad304c4"
+        "outputId": "0edc5a19-ff83-4634-bd02-c56784aae40c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
